<resources>
    <string name="app_name">HexScouter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HexScouter</string>
    <string name="nav_header_subtitle">The Official 3197 Scouting App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_new_form">New Form</string>
    <string name="menu_edit_form">Edit Cached Form</string>
    <string name="menu_view">View Data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
