<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new_form"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_new_form" />
        <item
            android:id="@+id/nav_edit_form"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_edit_form" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
